[project]
name = "thelasthours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "spacey",
    "matplotlib",
    "selenium",
    "networkx",
    "numpy",
    "webdriver_manager",
    "pyvis"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages=["src/thelasthours"]